# choicellm

./: README.md  codemeta.json  pyproject.toml
src/: aggregate.py  choicellm.py  multichoicemodel.py  prompttemplate.py
